Completed writing index.html

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
             <!-- Introduction Box -->
             <div class="intro box">
                 <div class="intro words">
-
+                    <h1>Where to Eat at USC</h1>
+                    <p>Welcome, hungry people! If you're looking for the best restaurants near USC, then look no further. This page has all the information on the best grub near USC.</p>
+                    <button type="button">Sign Up</button>
                 </div>
 
                 <div class="intro image">
-
+                    <img src="images/uscvillage.jpg" alt="USC Village">
                 </div>
             </div>
 
@@ -42,23 +44,42 @@
                 <div class="content info">
                     <div>
                         <!-- add image and caption -->
+                        <img src="images/monarca.jpg" alt="Monarca">
+                        <p>Monarca Pasta & Grill</p>
+                    </div>
+
+                    <div>
+                        <!-- add image and caption -->
+                        <img src="images/manas.jpg" alt="Manas">
+                        <p>Manas</p>
+                    </div>
+
+                    <div>
+                        <!-- add image and caption -->
+                        <img src="images/thaibytrio.jpg" alt="Thai by Trio">
+                        <p>Thai by Trio</p>
                     </div>
                 </div>
+                
             </div>
 
             <!-- Quote Box -->
             <div class="quote box">
                 <!-- Add quote -->
+                <p>I hid myself in food.</p>
+                <p>- Gordon Ramsey</p>
             </div>
 
             <!-- Sign Up Box -->
             <div class="sign up box">
                 <div class="sign up texts">
                     <!-- Add texts here -->
+                    <h3>Want the lowdown on USC restaurants?</h3>
+                    <p>Sign up for the latest and greatest USC food news now!</p>
                 </div>
 
                 <div class="sign up button">
-
+                    <button type="button">Sign up</button>
                 </div>
             </div>
 
